--- a/andFlmsg_Head_CPP120/src/main/res/values-zh/strings.xml
+++ b/andFlmsg_Head_CPP120/src/main/res/values-zh/strings.xml
@@ -34,7 +34,7 @@
     <string name="bt_Share">分享</string>
     <string name="bt_SlantLeft">向左倾斜</string>
     <string name="bt_SlantRight">向右倾斜</string>
-    <string name="bt_SpeedColor">速率/颜色</string>
+<string name="bt_SpeedColor">速率/色彩</string>
     <string name="bt_SqlchDown">静噪 降</string>
     <string name="bt_SqlchUp">静噪 升</string>
     <string name="bt_StopTx">停止发射</string>
@@ -70,15 +70,15 @@
     <string name="pref_FILENAME">文件名称</string>
     <string name="pref_FilterBandwidthFactor">滤波器带宽系数(1.0 to 2.0)</string>
     <string name="pref_FilteringBeforeDecoding">解码前过滤</string>
-    <string name="pref_ForSomeDevices">对于某些设备 (typical 16 seconds)</string>
+<string name="pref_ForSomeDevices">对于某些设备 (typical 16 秒)</string>
     <string name="pref_ForceCompressionOnTx">发送时强制启动压缩</string>
-    <string name="pref_ForceIntegrationReset">重置力集成（FEC）深度</string>
+<string name="pref_ForceIntegrationReset">重置力集成（前向纠错）深度</string>
     <string name="pref_GPSTIME">GPS时间</string>
     <string name="pref_GeneralSettings">通用设置</string>
     <string name="pref_IDs">RSID</string>
     <string name="pref_IMAGEATTACHMENT">图像附件</string>
     <string name="pref_IfItSavesTxCharacters">(注意：是否保存发送字符数)</string>
-    <string name="pref_IntegrationPeriod">Integration Period (2 to 128, 默认 4)</string>
+<string name="pref_IntegrationPeriod">整合期 (2 to 128, 默认 4)</string>
     <string name="pref_JpegCompressionQuality">Jpeg图像压缩质量</string>
     <string name="pref_LeapSecondsCorrection">跳秒修正</string>
     <string name="pref_LongReceiveIntegration">长时接收集成</string>
@@ -88,7 +88,7 @@
     <string name="pref_ModeList">模式列表</string>
     <string name="pref_ModemVolume">调制解调器音量</string>
     <string name="pref_ModesSpecificSettings">模式特定设置</string>
-    <string name="pref_MultiPSKCompatibleFEC">兼容MultiPSK的FEC</string>
+<string name="pref_MultiPSKCompatibleFEC">兼容MultiPSK前向纠错</string>
     <string name="pref_MyAddress">我的地址</string>
     <string name="pref_MyCallsign">我的呼号</string>
     <string name="pref_MyCityStateZIP">我的 市/省/邮编</string>
@@ -96,7 +96,7 @@
     <string name="pref_MyTelephone">我的电话号码</string>
     <string name="pref_NOCAL">无呼号</string>
     <string name="pref_NextSerialNumber">下一个序列号</string>
-    <string name="pref_NumberOfFecBlocks">(FEC块数)</string>
+<string name="pref_NumberOfFecBlocks">(前向纠错分段)</string>
     <string name="pref_NumberOfTones">音调数量</string>
     <string name="pref_OnHTMLDisplayForms">(在HTML显示表单上)</string>
     <string name="pref_PERSONALDATA">个人资料</string>
@@ -108,14 +108,14 @@
     <string name="pref_SerialInFileName">文件名包含序列号</string>
     <string name="pref_ShowARLDescription">显示ARL说明</string>
     <string name="pref_SlowCpu">低速CPU</string>
-    <string name="pref_SoftBitDecoding">软比特解码)</string>
+<string name="pref_SoftBitDecoding">软比特解</string>
     <string name="pref_SoftSymbolDecoding">软符号解码</string>
     <string name="pref_TimeFormat">时间格式</string>
     <string name="pref_TimeInFileName">文件名包含时间</string>
     <string name="pref_ToneDuration">音调持续时间</string>
     <string name="pref_ToneFrequencySpacing">(音调频率间隔)</string>
     <string name="pref_TransmitLowerStartTone">传送较低的开始音</string>
-    <string name="pref_TuneMargin">Tune Margin (2 to 128, 默认 8)</string>
+<string name="pref_TuneMargin">音调间距 (2 to 128, 默认 8)</string>
     <string name="pref_UseCompression">使用压缩进行数据交换</string>
     <string name="pref_UseCustomListOfModes">使用自定义模式列表</string>
     <string name="pref_UseGPSTime">使用GPS时间</string>
@@ -137,11 +137,11 @@
     <string name="txt_CPU">CPU</string>
     <string name="txt_Cancel">取消</string>
     <string name="txt_CantEditThatMessage">无法编辑此消息</string>
-    <string name="txt_ChecksumOK">\\n"文件完整性检查：校验通过\"</string>
+<string name="txt_ChecksumOK">\"文件完整性检查：校验通过\"</string>
     <string name="txt_ChooseLocForNbemsFiles">
 请选择NBEMS.files文件夹的位置。 \n\n导航到所需的文件夹，然后按确定按钮
 </string>
-    <string name="txt_Color">颜色</string>
+<string name="txt_Color">彩色</string>
     <string name="txt_ComposeViewLongPress">
 撰写界面\n\n 长按表单以创建新消息
 </string>
@@ -162,7 +162,7 @@
 调制解调器打开，调制解调器正在使用麦克风/蓝牙
 </string>
     <string name="txt_FormattingWait">正在格式化...请稍候</string>
-    <string name="txt_Grey">灰色</string>
+<string name="txt_Grey">黑白</string>
     <string name="txt_HTML">HTML</string>
     <string name="txt_ImageInsertedInMessage">图片已插入邮件中</string>
     <string name="txt_ImageReceivedTooLate">
@@ -210,7 +210,7 @@
     <string name="txt_RawFlmsg">原始图像</string>
     <string name="txt_ReceivedMessage">收到消息</string>
     <string name="txt_ReceivingFile">接收文件</string>
-    <string name="txt_ReceivingNewMessage">\\n"正在接收新邮件...\"</string>
+<string name="txt_ReceivingNewMessage">正在接收新邮件...</string>
     <string name="txt_ReceivingNewMessageDiscardingOld">
 \"\n\n接收新消息，有部分数据丢失\n\"
 </string>
@@ -259,7 +259,7 @@
 警告！ 这仅用于共享原始表格。 想要将键入的数据另存为消息，请使用表单底部的按钮。 继续发送原始表格（无数据）吗？
 </string>
     <string name="txt_WelcomeIntro">
-\n\n 分发该程序是希望它会有用，但没有任何担保； 甚至没有对适销性或特定用途适用性的暗示保证。 有关更多详细信息，请参见GNU通用公共许可证。\n\n在屏幕上滑动以导航至其他屏幕，并使用设备的“菜单”按钮访问首选项和其他功能。\n\n请访问www.w1hkj.com。 有关更多详细信息\n\n 73，Fldigi团队\n\n
+\n\n 分发该程序是希望它会有用，但没有任何担保； 甚至没有对适销性或特定用途适用性的暗示保证。 有关更多详细信息，请参见GNU通用公共许可证。\n\n在屏幕上左右滑动以切换至其他界面，并使用设备的“菜单”按钮访问首选项和其他功能。\n\n请访问www.w1hkj.com。 有关更多详细信息\n\n 73，Fldigi团队
 </string>
     <string name="txt_WelcomeToAndFlmsg">欢迎来到AndFlmsg</string>
     <string name="txt_Yes">是</string>
@@ -268,7 +268,7 @@
 请发送崩溃信息电子邮件给作者，以帮助解决问题。 谢谢，73。
 </string>
     <string name="txt_license">
-\n\n基于David（Dave）Freese（W1HKJ）和团队的Fldigi和Flmsg开发。\n\n分发该程序的目的是希望它会有用，但没有任何担保；甚至没有对适销性或特定用途适用性的暗示保证。 \n有关更多详细信息，请参见GNU通用公共许可证。\n\n\n在以下许可下，包含aFileDialog库（版权所有2013 Jose F. Maldonado）：\n该库是免费软件；您可以根据自由软件基金会（Free Software Foundation）发布的GNU通用公共许可协议（GNU Lesser General Public License）的条款重新分发和/或修改它；许可的版本3，或（由您选择）任何更高的版本。 \n分发该库是希望它会有用，但没有任何保证；甚至没有对适销性或特定用途适用性的暗示保证。有关更多详细信息，请参见GNU较小通用公共许可证。 \n您应该已经与该库一起收到了GNU通用公共通用许可证的副本；如果没有，请参阅http://www.gnu.org/licenses/。
+\n\n基于David（Dave）Freese（W1HKJ）和团队的Fldigi和Flmsg开发。\n\n发布本程序的目的是希望它会有用，但不作任何保证；甚至没有对适用性或特定用途适用性的暗示保证。 \n有关更多详细信息，请参见GNU通用公共许可证。\n\n\n在以下许可下，包含aFileDialog库（版权所有2013 Jose F. Maldonado）：\n该库是免费软件；您可以根据自由软件基金会（Free Software Foundation）发布的GNU通用公共许可协议（GNU Lesser General Public License）的条款重新分发和/或修改它；许可的版本3，或（由您选择）任何更高的版本。 \n发布该库是希望它会有用，但没有任何保证；甚至没有对适用性或特定用途适用性的暗示保证。有关更多详细信息，请参见GNU较小通用公共许可证。 \n您应该已经与该库一起收到了GNU通用公共通用许可证的副本；如果没有，请参阅http://www.gnu.org/licenses/。
 </string>
     <string name="values_High">高</string>
     <string name="values_Low">低</string>
